Revamped summery view and added material list and coloration.

--- a/Client/src/app/main/content/calender-view/summery-cards/summery-cards.component.css
+++ b/Client/src/app/main/content/calender-view/summery-cards/summery-cards.component.css
@@ -14,3 +14,12 @@
 .container-fluid {
   padding: 0;
 }
+
+.red-primary {
+  background-color: #ae0000;
+  color: whitesmoke;
+}
+
+.red-secondary {
+  background-color: whitesmoke;
+}
