--- a/Client/src/app/main/content/calender-view/summery-cards/summery-cards.component.html
+++ b/Client/src/app/main/content/calender-view/summery-cards/summery-cards.component.html
@@ -1,94 +1,87 @@
+  <div class="d-flex flex-row">
+    <div class="d-flex flex-column">
+      <div class="d-flex flex-row">
 
-<div class="d-flex flex-row">
+        <div class="d-flex flex-column">
 
-  <div class="d-flex flex-column">
+          <div class="card-deck">
 
-    <div class="card-deck">
+            <div class="card mb-3" >
+              <div class="card-body">
+                <h5 class="card-title">Patient Information</h5>
+              </div>
 
-      <div class="card mb-3" >
-        <div class="card-body">
-          <h5 class="card-title">Patient Information</h5>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item"> Namn: {{patient.Namn}} </li>
+                <li class="list-group-item"> Personnummer: {{patient.Personnummer}} </li>
+                <li class="list-group-item"> ICD10: {{patient.ICD10}} </li>
+                <li class="list-group-item"> KVÅ: {{patient.KVA}} </li>
+              </ul>
+            </div>
+
+
+            <div class="card mb-3" >
+              <div class="card-body">
+                <h5 class="card-title">Operation</h5>
+              </div>
+
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item"> Sal: {{patient.Sal}}  </li>
+                <li class="list-group-item">Operationstyp: {{patient.Operationstyp}}</li>
+                <li class="list-group-item">Förberedelsetid: {{patient.Forberedelsetid}}</li>
+                <li class="list-group-item">Avvecklingstid: {{patient.Avvecklingstid}}</li>
+              </ul>
+
+            </div>
+
+            <div class="card mb-3" [ngClass]="urgency == 'AKUT' ? 'red-primary' : ''">
+              <div class="card-body">
+                <h5 class="card-title">Hejsan {{urgency}}</h5>
+              </div>
+
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item" [ngClass]="urgency == 'AKUT' ? 'red-secondary' : ''">Tid: {{patient.Tid}}</li>
+                <li class="list-group-item" [ngClass]="urgency == 'AKUT' ? 'red-secondary' : ''">Brådskandegrad: {{patient.Bradskandegrad}}</li>
+                <li class="list-group-item" [ngClass]="urgency == 'AKUT' ? 'red-secondary' : ''">Operationstid: {{patient.Operationtid}}</li>
+              </ul>
+            </div>
+          </div>
         </div>
 
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item"> Namn: {{patient.Namn}} </li>
-          <li class="list-group-item"> Personnummer: {{patient.Personnummer}} </li>
-          <li class="list-group-item"> ICD10: {{patient.ICD10}} </li>
-          <li class="list-group-item"> KVÅ: {{patient.KVA}} </li>
-        </ul>
       </div>
 
+      <div class="d-flex flex-row">
+        <div class="d-flex flex-column">
 
-      <div class="card mb-3" >
-        <div class="card-body">
-          <h5 class="card-title">Operation</h5>
+          <div class="card-deck">
+
+            <div *ngFor="let materiel of this.material">
+              <div class="card text-center mb-3" [hidden]="materialList">
+                <div class="card-header">
+                  {{materiel.name}}
+                </div>
+                <ul class="list-group list-group-flush list-unstyled">
+                  <li class="Antal"> Kvantitet: {{materiel.quantity}} st</li>
+                  <li class="sterilisering tid">Steriliseringstid: {{materiel.sterilizing_time}} minuter</li>
+                  <li class="artikelnum">Artikelnummer: {{materiel.article_no}}</li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
-
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item"> Sal: {{patient.Sal}}  </li>
-          <li class="list-group-item">Operationstyp: {{patient.Operationstyp}}</li>
-          <li class="list-group-item">Förberedelsetid: {{patient.Forberedelsetid}}</li>
-          <li class="list-group-item">Avvecklingstid: {{patient.Avvecklingstid}}</li>
-        </ul>
-
       </div>
-
-      <div class="card mb-3" >
-        <div class="card-body">
-          <h5 class="card-title">Hejsan</h5>
-        </div>
-
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Tid: {{patient.Tid}}</li>
-          <li class="list-group-item">Brådskandegrad: {{patient.Bradskandegrad}}</li>
-          <li class="list-group-item">Operationstid: {{patient.Operationtid}}</li>
-        </ul>
-
-      </div>
-
     </div>
 
-    <div class="d-flex"> <h2>Insert event modifier</h2> </div>
-
+    <div class="d-flex flex-column" style="width: 40%; min-width: 600px">
+      <h5>This is for spår</h5>
+    </div>
   </div>
 
-  <div class="container" style="max-width: 40%">
+  <button type="button" class="btn btn-primary" (click)="materialList = !materialList" style="width: 100%">Materiellista</button>
+  <div class="d-flex"> <h2>Insert event modifier</h2> </div>
 
-    <div class="card mb-3" >
-      <div class="card-body">
-        <h5 class="card-title">Card 1</h5>
-      </div>
+  <br><br>
 
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item"> Namn: {{patient.Namn}} </li>
-        <li class="list-group-item"> Personnummer: {{patient.Personnummer}} </li>
-        <li class="list-group-item"> ICD10: {{patient.ICD10}} </li>
-        <li class="list-group-item"> KVÅ: {{patient.KVA}} </li>
-      </ul>
-    </div>
-
-
-    <div class="card mb-3" >
-      <div class="card-body">
-        <h5 class="card-title">Card 2</h5>
-      </div>
-
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item"> Sal: {{patient.Sal}}  </li>
-        <li class="list-group-item">Operationstyp: {{patient.Operationstyp}}</li>
-        <li class="list-group-item">Förberedelsetid: {{patient.Forberedelsetid}}</li>
-        <li class="list-group-item">Avvecklingstid: {{patient.Avvecklingstid}}</li>
-      </ul>
-
-    </div>
-
+  <div class="d-flex flex-row">
+    <button class="btn btn-primary"> Boka </button>
   </div>
-
-</div>
-
-<br><br>
-
-<div class="d-flex flex-row">
-  <button class="btn btn-primary"> Boka </button>
-</div>
-
