--- a/Client/src/app/main/sidebar/planning/planning.component.html
+++ b/Client/src/app/main/sidebar/planning/planning.component.html
@@ -56,6 +56,7 @@
               <li class="Antal"> Kvantitet: {{materiel.quantity}} st</li>
               <li class="sterilisering tid">Steriliseringstid: {{materiel.sterilizing_time}} minuter</li>
               <li class="artikelnum">Artikelnummer: {{materiel.article_no}}</li>
+              <li class="artikelnum">Artikeltyp: {{materiel.Material_type.name}}</li>
 
             </ul>
           </div>
