--- a/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
+++ b/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
@@ -5,8 +5,8 @@
 
       <div class="row">
         <div class="col-md">Namn: {{patient.Namn}}</div>
-        <div class="col-md-2" *ngIf="patient.Bokad"><span class="glyphicon glyphicon-ok text-right" style="color: limegreen"></span> </div>
-        <div class="col-md-2" *ngIf="!patient.Bokad"><span class="glyphicon glyphicon-warning-sign text-right" style="color: orange"></span> </div>
+        <div class="col-md-2" *ngIf="patient.Bokad"><span class="glyphicon glyphicon-ok text-right" style="color: limegreen; float: right; padding-right: 5px"></span> </div>
+        <div class="col-md-2" *ngIf="!patient.Bokad"><span class="glyphicon glyphicon-warning-sign text-right" style="color: orange; float: right; padding-right: 5px"></span> </div>
 
 
       </div>
