--- a/Client/src/app/main/content/calender-view/calender-view.component.html
+++ b/Client/src/app/main/content/calender-view/calender-view.component.html
@@ -118,7 +118,7 @@
         (beforeViewRender) = "beforeWeekViewRender($event)">
       </mwl-calendar-week-view>
 
-      <ul>
+      <ul class="list-unstyled">
 
         <li>
           <div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</div>
