--- a/Client/src/app/main/sidebar/overview/buttonpanel-overview/buttonpanel-overview.component.html
+++ b/Client/src/app/main/sidebar/overview/buttonpanel-overview/buttonpanel-overview.component.html
@@ -40,8 +40,8 @@
         <div class="dropdown-menu">
           <a class="dropdown-item" href="#"><input type="checkbox" (change)="akutChecked = !akutChecked; filter('AKUT', akutChecked)" title="Akut"/>&nbsp;Akut</a>
           <a class="dropdown-item" href="#"><input type="checkbox" (change)="elektivChecked = !elektivChecked; filter('Elektiv', elektivChecked)" title="Elektiv"/>&nbsp;Elektiv</a>
-          <a class="dropdown-item" href="#"><input type="checkbox" (change)="bokadChecked = !bokadChecked; filter('bokad', bokadChecked)" title="Bokad"/>&nbsp;Färdigbokade</a>
-          <a class="dropdown-item" href="#"><input type="checkbox" (change)="prebokadChecked = !prebokadChecked; filter('prebokad', prebokadChecked)" title="PreBokad"/>&nbsp;Preliminärbokade</a>
+          <a class="dropdown-item" href="#"><input type="checkbox" (change)="bokadChecked = !bokadChecked; filter('bokad', bokadChecked)" title="Bokad"/> Bokade</a>
+          <a class="dropdown-item" href="#"><input type="checkbox" (change)="prebokadChecked = !prebokadChecked; filter('prebokad', prebokadChecked)" title="PreBokad"/> Obokade</a>
 
         </div>
 
