--- a/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
+++ b/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
@@ -18,7 +18,7 @@
 
 
       <div class="row">
-        <div class="col-md">Operationstyp: {{patient.Operationstyp}} </div>
+        <div class="col-md">Huvudåtgärd: {{patient.procedures[0].description}} </div>
       </div>
 
 
