--- a/Client/src/app/main/content/calender-view/calender-view.component.html
+++ b/Client/src/app/main/content/calender-view/calender-view.component.html
@@ -21,7 +21,7 @@
   </div>
 </ng-template>
 
-<div class="row text-center">
+<div class="row text-center" style="margin: 0">
   <div class="col-md-4">
     <div class="btn-group">
       <div
@@ -83,7 +83,7 @@
 </div>
 <br>
 
-<div class="row text-center">
+<div class="row text-center" style="margin: 0">
   <div class="col-md">
     <button class="btn btn-primary" (click)="combineEvents()">Kirurger och salar</button>
     <button class="btn btn-primary" (click)="setRooms()">Salar</button>
@@ -92,7 +92,7 @@
 </div>
 <br>
 
-<div class="row a">
+<div class="row a" style="margin: 0">
   <div class="col col-a">
     <div [ngSwitch]="view">
 
