Hide summary when no patient is selected.

--- a/Client/src/app/main/content/calender-view/calender-view.component.html
+++ b/Client/src/app/main/content/calender-view/calender-view.component.html
@@ -71,7 +71,7 @@
         [class.active]="view === 'day'">
         Dag
       </div>
-      <div
+      <div *ngIf="currentPatient"
         class="btn btn-primary"
         (click)="view = 'summery'"
         [class.active]="view === 'summery'">
