Added login screen

--- a/Client/src/app/login/login.component.css
+++ b/Client/src/app/login/login.component.css
@@ -1,3 +1,17 @@
 #errormessage {
   color:red;
 }
+
+.container-fluid {
+  width: 340px;
+  margin: auto;
+  background: whitesmoke;
+  padding: 30px;
+}
+
+.btn {
+  min-height: 38px;
+  border-radius: 2px;
+  font-size: 15px;
+  font-weight: bold;
+}
