--- a/Client/src/app/login/login.component.html
+++ b/Client/src/app/login/login.component.html
@@ -1,4 +1,35 @@
-Användarnamn: <input #username type="text">
+<div class="container-fluid">
+
+  <h2 class="text-center">Inlogging</h2>
+
+  <div class="form-group">
+    <input #username type="text" class="form-control" placeholder="Användarnamn">
+  </div>
+
+  <div class="form-group">
+    <input #password type="password" class="form-control" placeholder="Lösenord">
+  </div>
+
+  <div class="form-group">
+    <button class="btn btn-primary btn-block" (click)="login(username.value, password.value)">Logga in</button>
+  </div>
+
+  <div class="form-group">
+    <div id="errormessage" *ngIf="loginService.previousError != ''">Felaktigt användarnamn eller lösenord</div>
+  </div>
+
+  <div class="clearfix">
+    <label class="pull-left checkbox-inline"><input type="checkbox">Kom ihåg mig</label>
+    <a href="#" class="pull-right">Glömt lösenord?</a>
+  </div>
+
+
+</div>
+
+
+
+<!--Användarnamn: <input #username type="text">
 Lösenord: <input #password type="password">
 <button (click)="login(username.value, password.value)">Logga in</button><br>
 <div id="errormessage" *ngIf="loginService.previousError != ''">{{loginService.previousError}}</div>
+--->
