add and remove tracs for rooms now work, switch day still doesnt work

--- a/Client/src/app/main/content/day-view/day-view.component.html
+++ b/Client/src/app/main/content/day-view/day-view.component.html
@@ -1,5 +1,6 @@
 <!--<div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</div>-->
 <li>
+  <label>{{title}}</label>
   <mwl-calendar-day-view
     [viewDate]="viewDate"
     [events]="events"
