--- a/Client/src/app/main/content/calender-view/calender-view.component.html
+++ b/Client/src/app/main/content/calender-view/calender-view.component.html
@@ -82,6 +82,17 @@
     <button class="btn btn-primary" (click)="setRooms()">Salar</button>
     <button class="btn btn-primary" (click)="setDoctors()">Kirurger</button>
     <button class="btn btn-primary" (click)="createDay()">Skapa dagsvy</button>
+    <div class="btn-group pull-right">
+
+      <button type="button" class="btn dropdown-toggle btn-primary" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Välj salar
+      </button>
+
+      <div class="dropdown-menu">
+          <div *ngFor="let room of rooms" class="dropdown-item"><input type="checkbox" value="{{room.id}}" (change)="updateRooms($event, room)"/> {{room.name}}</div>
+      </div>
+
+    </div>
   </div>
 </div>
 <br>
