Changed login view colors, fixed server error

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,2 +1,2 @@
 <div *ngIf="loginService.loggedIn"><app-main></app-main></div>
-<div *ngIf="!loginService.loggedIn"><app-login></app-login></div>
+<div id="loginview" *ngIf="!loginService.loggedIn"><app-login></app-login></div>
