--- a/Client/src/app/login/login.component.css
+++ b/Client/src/app/login/login.component.css
@@ -2,10 +2,14 @@
   color:red;
 }
 
+#logincaption {
+  color: whitesmoke;
+}
+
 .container-fluid {
   width: 340px;
   margin: auto;
-  background: whitesmoke;
+  background-color: #0d2b37;
   padding: 30px;
 }
 
