--- a/Client/src/app/login/login.component.css
+++ b/Client/src/app/login/login.component.css
@@ -1,8 +1,10 @@
 #errormessage {
-  color:red;
+  color: red;
+  height: 1em;
+  text-align: center;
 }
 
-#logincaption {
+.caption {
   color: whitesmoke;
 }
 
