--- a/Client/src/app/login/login.component.html
+++ b/Client/src/app/login/login.component.html
@@ -4,12 +4,12 @@
 
   <div class="form-group">
     <span class="caption">Användarnamn:</span>
-    <input #username type="text" class="form-control" placeholder="Användarnamn">
+    <input #username type="text" class="form-control">
   </div>
 
   <div class="form-group">
     <span class="caption">Lösenord:</span>
-    <input #password type="password" class="form-control" placeholder="Lösenord">
+    <input #password type="password" class="form-control">
   </div>
 
   <div class="form-group">
