made progress on summery

--- a/Client/src/app/main/content/calender-view/summery-cards/summery-cards.component.css
+++ b/Client/src/app/main/content/calender-view/summery-cards/summery-cards.component.css
@@ -26,6 +26,10 @@
   color: #333333;
 }
 
+select.form-control:not([size]):not([multiple]) {
+  height: auto;
+}
+
 span{
   width: 45%;
   padding: 2px;
