fix tracks visible in month and week vewis

--- a/Client/src/app/main/content/calender-view/calender-view.component.html
+++ b/Client/src/app/main/content/calender-view/calender-view.component.html
@@ -130,7 +130,7 @@
         (beforeViewRender) = "beforeWeekViewRender($event)">
       </mwl-calendar-week-view>
 
-      <div class="tracks-day-view">
+      <div class="tracks-day-view" *ngSwitchCase="'day'">
           <template #dayView></template>
       </div>
     </div>
