--- a/Client/src/app/main/content/calender-view/calender-view.component.html
+++ b/Client/src/app/main/content/calender-view/calender-view.component.html
@@ -79,7 +79,7 @@
 </div>
 <br>
 
-<div *ngIf="this.view ==='day' && this.currentPatient != null" class="row text-center">
+<div *ngIf="this.view ==='day'" class="row text-center">
   <div class="col-md">
     <div class="btn-group pull-right">
 
