--- a/Client/src/app/main/content/day-view/day-view.component.html
+++ b/Client/src/app/main/content/day-view/day-view.component.html
@@ -1,9 +1,9 @@
 <!--<div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</div>-->
 <div class="track-day" *ngFor="let resource of resourceSchedules | keys">
-  <h1>{{resource}}</h1>
+  <h1>{{resource.key}}</h1>
   <mwl-calendar-day-view
     [viewDate]="viewDate"
-    [events]="resourceSchedules[resource]"
+    [events]="resource.value"
     [refresh]="refresh"
     [locale]="locale"
     (eventClicked)="handleEvent('Clicked', $event.event)"
