Implement filterd list for room selection
Room selection now only shows rooms that can perform the selected decision. All available tracks are choosen by default

--- a/Client/src/app/main/content/calender-view/calender-view.component.html
+++ b/Client/src/app/main/content/calender-view/calender-view.component.html
@@ -88,7 +88,10 @@
       </button>
 
       <div class="dropdown-menu">
-          <div *ngFor="let room of rooms" class="dropdown-item"><input type="checkbox" value="{{room.id}}" (change)="updateRooms($event, room)"/> {{room.name}}</div>
+        <div *ngFor="let room of roomMap | keys" class="dropdown-item">
+          <input type="checkbox" value="{{room.value.id}}" (change)="updateRooms($event, room.key)" *ngIf="room.value" checked/>
+          <input type="checkbox" value="{{room.value.id}}" (change)="updateRooms($event, room.key)" *ngIf="room.value == false"/>
+          {{room.key}}</div>
       </div>
 
     </div>
