Fixed button look

--- a/Client/src/app/main/content/calender-view/summery-cards/summery-cards.component.html
+++ b/Client/src/app/main/content/calender-view/summery-cards/summery-cards.component.html
@@ -122,5 +122,5 @@
     </div>
 
   </div>
-<button (click)="onFormSubmit()">Boka Operation</button>
-<button *ngIf="this.patient.booking" (click)="unbook()">Avboka Operation</button>
+<button class="btn btn-primary" (click)="onFormSubmit()">Boka Operation</button>
+<button class="btn btn-primary" *ngIf="this.patient.booking" (click)="unbook()">Avboka Operation</button>
