--- a/Client/src/angular-calendar.css
+++ b/Client/src/angular-calendar.css
@@ -1,3 +1,7 @@
+.odd-hour-segment {
+  background-color: pink !important;
+}
+
 .cal-month-view .cal-header {
   text-align: center;
   font-weight: bolder; }
