--- a/Client/src/app/main/content/day-view/day-view.component.html
+++ b/Client/src/app/main/content/day-view/day-view.component.html
@@ -9,6 +9,7 @@
     (eventClicked)="handleEvent('Clicked', $event.event)"
     (eventTimesChanged)="eventTimesChanged($event)"
     (beforeViewRender)="beforeDayViewRender($event, resource.value.roomId)"
+    (hourSegmentClicked)="segmentClicked($event.date, resource)"
     class="day-view-track">
   </mwl-calendar-day-view>
 </div>
