Add time selection

--- a/Client/src/app/main/content/day-view/day-view.component.html
+++ b/Client/src/app/main/content/day-view/day-view.component.html
@@ -1,4 +1,5 @@
 <!--<div *ngSwitchCase="'day'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</div>-->
+<button (click)="continueWithTime()">Fortsätt med vald tid</button><button (click)="undoTime()">Ångra vald tid</button>
 <div class="track-day" *ngFor="let resource of resourceSchedules | keys">
   <h1>{{resource.key}}</h1>
   <mwl-calendar-day-view
